# capture-win-mcp

./: .gitignore  CLAUDE.md  DISTRIBUTION.md  MANIFEST.in  QUICK_START.md  README.md  pyproject.toml
capture_win_mcp/: __init__.py  server.py  tracker.py
