[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capture-win-mcp"
version = "0.1.0"
description = "MCP server for capturing macOS windows and tracking Spaces"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Nikolai Schlegel", email = "nikolai.schlegel@gmail.com"}
]
keywords = ["mcp", "macos", "window-manager", "yabai", "screenshot", "spaces"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: Window Managers",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/capture-win-mcp"
Repository = "https://github.com/yourusername/capture-win-mcp"
Issues = "https://github.com/yourusername/capture-win-mcp/issues"

[project.scripts]
capture-win-mcp = "capture_win_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["capture_win_mcp"]
